  specified range.
- teleportAuto_maxDmgInLock (number)
  Similar to teleportAuto_maxDmg, but only has effect when in lockMap.
- teleportAuto_minAggressivesInLock (number)
  Similar to teleportAuto_minAggressives, but only has effect when in lockMap.
- portalRecord:
  0 - don't automatically record portals
  1 - record portals you walk through
  2 - record the return portal too (by guessing)

Internal:
- Move a "pm" message into "pm/sent" domain so that "beepOnDomains pm" won't
  beep on your own PMs.
- Add a third argument $obj to objectRemoved() function (just like
  objectAdded() has), and moved the objectRemoved() calls to just before the
  object was deleted so that $obj still exists when it is called.
- %mon_control added to Globals.pm.
- The Wx map viewer's xpmmake() has been rewritten in C++ for speed.
  It is now more than 100 times faster.
- makeDistMap() has also been written in C++ and is now more than 100
  times faster.
- New "refine" message domain.

Credits:
- jsteng: Pet detection fix.
- mondlicht: misc bug fixes.
- denni: previousDamage condition, teleportAuto_maxDmgInLock,
  teleportAuto_minAggressivesInLock.
- jojobail: some work on oRO support, storageAuto ability check.
- asuwannarat: Niflmheim portals.


==================
### 1.5.1 (beta)
==================

Bug fixes:
- Fix "undefined value as HASH" bug in the Wx item list control.
- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.
- "You are in Stunned state" message was verbosity 2 instead of 1.
- 'autostorage' command will now work even if storageAuto is set to 0.
- Sometimes openkore would stop auto-storing items covered by the 'all'